// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: FilterDropdown renders correctly 1`] = `
<div>
  <Popover
    id="filter-dropdown-popover-my-filter-dropdown"
    onClose={[Function]}
    trigger={
      <React.Fragment>
        <label
          className="hidden"
          htmlFor="filter-dropdown-my-filter-dropdown"
        >
          My Label
        </label>
        <TextField
          aria-describedby="filter-dropdown-popover-my-filter-dropdown"
          id="filter-dropdown-my-filter-dropdown"
          prefix={null}
          readOnly={true}
          suffix={<ArrowDropDown />}
          value="Status"
        />
      </React.Fragment>
    }
  >
    <ActionList
      actions={
        Array [
          Object {
            "content": "Active",
            "name": "active",
            "onClick": [Function],
            "selected": undefined,
          },
          Object {
            "content": "Terminated",
            "name": "terminated",
            "onClick": [Function],
            "selected": undefined,
          },
          Object {
            "content": "Suspended",
            "name": "suspended",
            "onClick": [Function],
            "selected": undefined,
          },
        ]
      }
    />
  </Popover>
  <Field
    className="hidden"
    component="input"
    key="active"
    name="status.active"
    parse={[Function]}
    tabIndex="-1"
    type="checkbox"
  />
  <Field
    className="hidden"
    component="input"
    key="terminated"
    name="status.terminated"
    parse={[Function]}
    tabIndex="-1"
    type="checkbox"
  />
  <Field
    className="hidden"
    component="input"
    key="suspended"
    name="status.suspended"
    parse={[Function]}
    tabIndex="-1"
    type="checkbox"
  />
</div>
`;

exports[`Component: FilterDropdown renders selected correctly 1`] = `
<div>
  <Popover
    id="filter-dropdown-popover-my-filter-dropdown"
    onClose={[Function]}
    trigger={
      <React.Fragment>
        <label
          className="hidden"
          htmlFor="filter-dropdown-my-filter-dropdown"
        >
          My Label
        </label>
        <TextField
          aria-describedby="filter-dropdown-popover-my-filter-dropdown"
          id="filter-dropdown-my-filter-dropdown"
          prefix="(1)"
          readOnly={true}
          suffix={<ArrowDropDown />}
          value="Status"
        />
      </React.Fragment>
    }
  >
    <ActionList
      actions={
        Array [
          Object {
            "content": "Active",
            "name": "active",
            "onClick": [Function],
            "selected": false,
          },
          Object {
            "content": "Terminated",
            "name": "terminated",
            "onClick": [Function],
            "selected": false,
          },
          Object {
            "content": "Suspended",
            "name": "suspended",
            "onClick": [Function],
            "selected": true,
          },
        ]
      }
    />
  </Popover>
  <Field
    className="hidden"
    component="input"
    key="active"
    name="status.active"
    parse={[Function]}
    tabIndex="-1"
    type="checkbox"
  />
  <Field
    className="hidden"
    component="input"
    key="terminated"
    name="status.terminated"
    parse={[Function]}
    tabIndex="-1"
    type="checkbox"
  />
  <Field
    className="hidden"
    component="input"
    key="suspended"
    name="status.suspended"
    parse={[Function]}
    tabIndex="-1"
    type="checkbox"
  />
</div>
`;
